cambio de fotografias

--- a/educacion-secundaria.html
+++ b/educacion-secundaria.html
@@ -70,7 +70,7 @@
       <span class="header__icon-menu"><i class="fa-solid fa-bars"></i></span>
     </header>
     <main class="main__educacion">
-      <div class="img-primaria">
+      <div class="img-primaria portada-secundaria">
         <h1>Educación Secundaria</h1>
       </div>
       <section class="primaria__container">
@@ -108,7 +108,7 @@
           <div class="postula__description">
             <h3>Admisión 2024</h3>
             <div>
-              <p>Para niños y niñas de 3, 4 y 5 años</p>
+              <p>Para estudiantes de 1° a 5° grado</p>
               <a href="./matricula.html" class="button">Postula aqui</a>
             </div>
           </div>
