--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- informacion sobre la institucion -->
         <div class="informationIns__container--bienvenido">
           <h1 class="bienvenido__title">
-            Bienvenidos a <br /><span>COLEGIOS CECNA</span>
+            Bienvenidos a <br /><span>COLEGIOS CCECNA</span>
           </h1>
           <hr class="bienvenido__separador" />
           <p class="bienvenido__parrafo">
@@ -142,7 +142,7 @@
                   <p class="imagen__fondoCurvo--servicio">Inicial</p>
                 </div>
               </div>
-              <img src="./assets/img/Inicial.jpg" alt="" />
+              <img src="./assets/img/Educacion-Inicial.jpeg" alt="" />
               <buttom class="container__card--button">Ver más</buttom>
             </div>
           </div>
@@ -157,7 +157,7 @@
                   <p class="imagen__fondoCurvo--servicio primaria">PRIMARIA</p>
                 </div>
               </div>
-              <img src="./assets/img/Inicial.jpg" alt="" />
+              <img src="./assets/img/Educacion-Primaria.jpeg" alt="" />
               <buttom class="container__card--button buttom-primaria"
                 >Ver más</buttom
               >
@@ -176,7 +176,7 @@
                   </p>
                 </div>
               </div>
-              <img src="./assets/img/Inicial.jpg" alt="" />
+              <img src="./assets/img/Educacion-Secundaria.jpeg" alt="" />
               <buttom class="container__card--button buttom-secundaria"
                 >Ver más</buttom
               >
@@ -280,7 +280,7 @@
           <hr class="information__container--separador" />
           <p class="information__container--parrafo">
             Nuestra institución educativa se encuentra estratégicamente ubicada
-            en Av. Mariscal Castilla 1641 El Tambo, Huancayo, brindando un
+            en Jr. Atenas S/N (Frente a Makro) - El Tambo - Huancayo, brindando un
             entorno accesible y seguro para nuestros estudiantes y sus familias.
             Ven a visitarnos y descubre cómo estamos comprometidos en
             proporcionar una educación de calidad en un lugar ideal para el
@@ -300,7 +300,7 @@
             ></iframe>
           </div>
           <div class="maps__container--informacioncolegio">
-            <h2>Colegios CECNA</h2>
+            <h2>Colegios CCECNA</h2>
             <div class="container__informacioncolegio">
               <div class="container__informacioncolegio--card">
                 <span class="iconos-maps">
@@ -309,7 +309,7 @@
                   ></span>
                 </span>
                 <p class="info">
-                  Av. Mariscal Castilla 1641 El Tambo, Huancayo
+                  Jr. Atenas S/N (Frente a Makro) - El Tambo - Huancayo
                 </p>
               </div>
               <div class="container__informacioncolegio--card">
@@ -334,7 +334,7 @@
                     ><i class="fa-solid icon-info fa-envelope"></i
                   ></span>
                 </span>
-                <p class="info">colegioscecna@uncp.edu.pe</p>
+                <p class="info">colegiosccecna@uncp.edu.pe</p>
               </div>
               <div class="container__informacioncolegio--card">
                 <span class="iconos-maps">
@@ -373,11 +373,11 @@
         <div class="container-informacion-footer">
           <a href="" class="info"
             ><span><i class="fa-brands icon-info fa-square-facebook"></i></span
-            >/colegiocecna</a
+            >/colegioccecna</a
           >
           <p class="info">
             <span><i class="fa-solid icon-info fa-envelope"></i></span
-            >colegiocecna@gmail.com
+            >colegioccecna@gmail.com
           </p>
           <p class="info">
             <span><i class="fa-solid icon-info fa-mobile-screen"></i></span
