cambios en main.js para envio al wsp

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/a3442d3abc.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./main.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -44,9 +45,15 @@
             <li class="nav__ul-li">
               <a href="#" class="li__a">Nivel Educativo</a>
               <ul class="li__ul li__ul-nivel-educativo">
-                <li class="li__ul-li"><a href="./educacion-inicial.html">Educacion Inicial</a></li>
-                <li class="li__ul-li"><a href="./educacion-primaria.html">Educacion Primaria</a></li>
-                <li class="li__ul-li"><a href="./educacion-secundaria.html">Educacion Secundaria</a></li>
+                <li class="li__ul-li">
+                  <a href="./educacion-inicial.html">Educacion Inicial</a>
+                </li>
+                <li class="li__ul-li">
+                  <a href="./educacion-primaria.html">Educacion Primaria</a>
+                </li>
+                <li class="li__ul-li">
+                  <a href="./educacion-secundaria.html">Educacion Secundaria</a>
+                </li>
                 <!-- <li class="li__ul-li">
                   <a href="">programas complementarios</a>
                 </li> -->
@@ -105,15 +112,15 @@
           </div>
           <div class="nosotros__container--img">
             <img src="./assets/img/artistica.jpg" alt="Imagen 1" />
-            <div class="img__title"><p>Alto nivel Academico</p></div>
+            <div class="img__title"><p>Formación Artistica</p></div>
           </div>
           <div class="nosotros__container--img">
             <img src="./assets/img/deportes.jpg" alt="Imagen 1" />
-            <div class="img__title"><p>Alto nivel Academico</p></div>
+            <div class="img__title"><p>Talleres deportivos</p></div>
           </div>
           <div class="nosotros__container--img">
             <img src="./assets/img/valores.jpg" alt="Imagen 1" />
-            <div class="img__title"><p>Alto nivel Academico</p></div>
+            <div class="img__title"><p>Formación en Valores</p></div>
           </div>
         </div>
       </section>
@@ -204,15 +211,24 @@
         </div>
         <div class="infraestructura__information--locales">
           <div class="locales__card">
-            <img src="https://img.freepik.com/vector-gratis/escena-edificio-escuela-grande_1308-32058.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1703548800&semt=ais" alt="Imagen 1" />
+            <img
+              src="https://img.freepik.com/vector-gratis/escena-edificio-escuela-grande_1308-32058.jpg?size=626&ext=jpg&ga=GA1.1.1687694167.1703548800&semt=ais"
+              alt="Imagen 1"
+            />
             <div class="card__ubicacion">Moderno local Huancayo</div>
           </div>
           <div class="locales__card">
-            <img src="https://images.theconversation.com/files/270544/original/file-20190423-175514-1rng58t.jpg?ixlib=rb-1.1.0&rect=6%2C0%2C4236%2C2828&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="Imagen 2" />
+            <img
+              src="https://images.theconversation.com/files/270544/original/file-20190423-175514-1rng58t.jpg?ixlib=rb-1.1.0&rect=6%2C0%2C4236%2C2828&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip"
+              alt="Imagen 2"
+            />
             <div class="card__ubicacion">Moderno Local Oroya</div>
           </div>
           <div class="locales__card">
-            <img src="https://estaticos-cdn.prensaiberica.es/clip/32f65c6a-27d4-4807-9230-3430738a666c_16-9-aspect-ratio_default_0.jpg" alt="Imagen 3" />
+            <img
+              src="https://estaticos-cdn.prensaiberica.es/clip/32f65c6a-27d4-4807-9230-3430738a666c_16-9-aspect-ratio_default_0.jpg"
+              alt="Imagen 3"
+            />
             <div class="card__ubicacion">Moderno Local El Tambo</div>
           </div>
         </div>
@@ -280,9 +296,9 @@
           <hr class="information__container--separador" />
           <p class="information__container--parrafo">
             Nuestra institución educativa se encuentra estratégicamente ubicada
-            en Jr. Atenas S/N (Frente a Makro) - El Tambo - Huancayo, brindando un
-            entorno accesible y seguro para nuestros estudiantes y sus familias.
-            Ven a visitarnos y descubre cómo estamos comprometidos en
+            en Jr. Atenas S/N (Frente a Makro) - El Tambo - Huancayo, brindando
+            un entorno accesible y seguro para nuestros estudiantes y sus
+            familias. Ven a visitarnos y descubre cómo estamos comprometidos en
             proporcionar una educación de calidad en un lugar ideal para el
             aprendizaje.
           </p>
@@ -290,7 +306,7 @@
         <div class="ubicacion__information--maps">
           <div class="maps__container--mapa">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d975.4643265857659!2d-75.22059773036933!3d-12.05333738772304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x910e963c689a75ef%3A0x819ecad9ec524409!2sMariscal%20Castilla%20(Real)%201641%2C%20Huancayo%2012006!5e0!3m2!1ses!2spe!4v1699374040030!5m2!1ses!2spe"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1640.5756220826574!2d-75.20906568064663!3d-12.045694856293762!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x910e963c6673d0df%3A0x526c3dab406a1549!2sCOLEGIO%20CCECNA%20TALENTOS!5e0!3m2!1ses!2spe!4v1703703395668!5m2!1ses!2spe"
               width="600"
               height="450"
               style="border: 0"
@@ -326,7 +342,7 @@
                     ><i class="fa-solid icon-info fa-mobile-screen"></i
                   ></span>
                 </span>
-                <p class="info">953 896 286</p>
+                <p class="info">988000807</p>
               </div>
               <div class="container__informacioncolegio--card">
                 <span class="iconos-maps">
@@ -371,7 +387,7 @@
           </p>
         </div>
         <div class="container-informacion-footer">
-          <a href="" class="info"
+          <a href="https://www.facebook.com/colegioccecna/" class="info"
             ><span><i class="fa-brands icon-info fa-square-facebook"></i></span
             >/colegioccecna</a
           >
@@ -381,11 +397,10 @@
           </p>
           <p class="info">
             <span><i class="fa-solid icon-info fa-mobile-screen"></i></span
-            >945143815
+            >988000807
           </p>
         </div>
       </div>
     </footer>
-    <script src="./main.js"></script>
   </body>
 </html>
