--- a/matricula.html
+++ b/matricula.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/a3442d3abc.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./main.js"></script>
     <title>Document</title>
   </head>
   <body>
