cambios en fotografias

--- a/educacion-inicial.html
+++ b/educacion-inicial.html
@@ -62,9 +62,9 @@
                 </li> -->
               </ul>
             </li>
-            <li class="nav__ul-li">
+            <!-- <li class="nav__ul-li">
               <a href="#" class="li__a">Angenda Cecna</a>
-            </li>
+            </li> -->
             <li class="nav__ul-li nav__ul-li-matriculate">
               <a href="./matricula.html" class="li__a">Matricúlate</a>
             </li>
@@ -107,7 +107,7 @@
         />
       </section>
       <section class="primaria__postula">
-        <div class="postula__banner">
+        <div class="postula__banner banner-inicial">
           <img src="./assets/img/corte.png" alt="" />
           <div class="postula__description">
             <h3>Admisión 2024</h3>
@@ -137,13 +137,13 @@
             />
             <img
               class="eventos__item3"
-              src="https://gestion.pe/resizer/Nd9ZhiWhT16FsvZTwFFbSjP5XXM=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/3XCNDFZRPFG7NB3YYYI4NRKUDI.jpg"
+              src="/assets/img/Inicial/foto-salon.jpg"
               alt=""
               class="eventos__item"
             />
             <img
               class="eventos__item4"
-              src="./assets/img/Inicial/fotografia-parque.jpg"
+              src="./assets/img/Inicial/inicial-baile.jpg"
               alt=""
               class="eventos__item"
             />
