--- a/educacion-primaria.html
+++ b/educacion-primaria.html
@@ -52,9 +52,9 @@
                 </li> -->
               </ul>
             </li>
-            <li class="nav__ul-li">
+            <!-- <li class="nav__ul-li">
               <a href="#" class="li__a">Angenda Cecna</a>
-            </li>
+            </li> -->
             <li class="nav__ul-li nav__ul-li-matriculate">
               <a href="./matricula.html" class="li__a">Matricúlate</a>
             </li>
@@ -75,19 +75,27 @@
           </h2>
           <div class="primaria__description">
             <p>
-              La formación de los niños del nivel inicial busca que ellos puedan
-              lograr un desarrollo integral y armónico en todas sus dimensiones,
-              que construyan una imagen positiva de sí mismos, fortalezcan su
-              autonomía y adquieran una formación en valores y espiritual basada
-              en los principios de la palabra de Dios.
+              En el nivel primario, nuestro enfoque educativo se centra en
+              proporcionar una base sólida para el desarrollo académico, social
+              y emocional de los estudiantes. Buscamos fomentar el amor por el
+              aprendizaje, la responsabilidad y el respeto hacia sí mismos y los
+              demás.
             </p>
             <p>
-              Para lograrlo trabajamos con la metodología ABP (aprendizaje,
-              basado en proyectos), cada nuevo proyecto parte de la realidad más
-              próxima al niño/a y busca resolver un problema o responder
-              preguntas que los propios niños plantean, durante este proceso de
-              aprendizaje se integra el juego, la exploración, el descubrimiento
-              y la estimulación sensorio motriz.
+              Utilizamos estrategias pedagógicas que involucran la participación
+              activa de los estudiantes en su proceso de aprendizaje. Además,
+              promovemos la adquisición de habilidades esenciales, el
+              pensamiento crítico y la resolución de problemas. Nuestros
+              proyectos educativos se diseñan para abordar temas relevantes e
+              inspirar la curiosidad, al tiempo que se alienta la colaboración
+              entre los estudiantes.
+            </p>
+            <p>
+              La formación en valores sigue siendo una parte integral de nuestra
+              enseñanza, y buscamos fomentar la empatía, la solidaridad y la
+              responsabilidad cívica. Trabajamos en estrecha colaboración con
+              los padres para apoyar el desarrollo académico y personal de cada
+              estudiante en esta etapa crucial de su educación.
             </p>
           </div>
         </div>
@@ -97,7 +105,7 @@
         />
       </section>
       <section class="primaria__postula">
-        <div class="postula__banner">
+        <div class="postula__banner banner-primaria">
           <img src="./assets/img/corte.png" alt="" />
           <div class="postula__description">
             <h3>Admisión 2024</h3>
@@ -133,7 +141,7 @@
             />
             <img
               class="eventos__item4"
-              src="https://universidadeuropea.com/resources/media/images/cabcera_grado_maestro_educacion_primaria_y_peda.original.jpg"
+              src="./assets/img/primaria/fotografia-primaria-concurso.jpg"
               alt=""
               class="eventos__item"
             />
