--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </li> -->
               </ul>
             </li>
-            <li class="nav__ul-li">
+            <!-- <li class="nav__ul-li">
               <a href="#" class="li__a">Angenda Cecna</a>
-            </li>
+            </li> -->
             <li class="nav__ul-li nav__ul-li-matriculate">
               <a href="./matricula.html" class="li__a">Matricúlate</a>
             </li>
@@ -86,7 +86,7 @@
       <div class="container__poster">
         <img
           class="poster__img"
-          src="./assets/img/poster-institucion.jpg"
+          src="./assets/img/poster-institucion.png"
           alt="poster de la isntitucion educativa"
         />
       </div>
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <img src="./assets/img/Educacion-Inicial.jpeg" alt="" />
-              <buttom class="container__card--button">Ver más</buttom>
+              <buttom class="container__card--button"><a href="./educacion-inicial.html">Ver más</a></buttom>
             </div>
           </div>
           <div class="servicios__container--card">
@@ -166,7 +166,7 @@
               </div>
               <img src="./assets/img/Educacion-Primaria.jpeg" alt="" />
               <buttom class="container__card--button buttom-primaria"
-                >Ver más</buttom
+                ><a href="./educacion-primaria.html">Ver más</a></buttom
               >
             </div>
           </div>
@@ -185,7 +185,7 @@
               </div>
               <img src="./assets/img/Educacion-Secundaria.jpeg" alt="" />
               <buttom class="container__card--button buttom-secundaria"
-                >Ver más</buttom
+                ><a href="./educacion-secundaria.html">Ver más</a></buttom
               >
             </div>
           </div>
