--- a/matricula.html
+++ b/matricula.html
@@ -63,9 +63,9 @@
                 </li> -->
               </ul>
             </li>
-            <li class="nav__ul-li">
+            <!-- <li class="nav__ul-li">
               <a href="#" class="li__a">Angenda Cecna</a>
-            </li>
+            </li> -->
             <li class="nav__ul-li nav__ul-li-matriculate">
               <a href="./matricula.html" class="li__a">Matricúlate</a>
             </li>
