--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <!-- <li class="nav__ul-li">
-              <a href="#" class="li__a">Angenda Cecna</a>
+              <a href="./programa-complementario.html" class="li__a">programas complementarios</a>
             </li> -->
             <li class="nav__ul-li nav__ul-li-matriculate">
               <a href="./matricula.html" class="li__a">Matricúlate</a>
@@ -150,7 +150,9 @@
                 </div>
               </div>
               <img src="./assets/img/Educacion-Inicial.jpeg" alt="" />
-              <buttom class="container__card--button"><a href="./educacion-inicial.html">Ver más</a></buttom>
+              <buttom class="container__card--button"
+                ><a href="./educacion-inicial.html">Ver más</a></buttom
+              >
             </div>
           </div>
           <div class="servicios__container--card">
@@ -259,7 +261,7 @@
             <img src="./assets/img/Fotos-galeria//img-7.jpg" alt="" />
             <img src="./assets/img/Fotos-galeria//img-8.jpg" alt="" />
             <img src="./assets/img/Fotos-galeria//img-9.jpg" alt="" />
-            <img src="./assets/img/Fotos-galeria//img-10.jpg" alt="" />
+            <img src="./assets/img/Fotos-galeria/img-10.jpg" alt="" />
             <img src="./assets/img/Fotos-galeria//img-11.jpg" alt="" />
             <img src="./assets/img/Fotos-galeria//img-12.jpg" alt="" />
             <img src="./assets/img/Fotos-galeria//img-13.jpg" alt="" />
